--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multiparty": "^4.2.2",
+    "passport": "^0.5.2",
     "sharp": "^0.25.2",
     "validator": "^13.0.0"
   },
