--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "multer": "^1.4.2",
     "multiparty": "^4.2.2",
     "passport": "^0.5.2",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sharp": "^0.25.2",
     "validator": "^13.0.0"
   },
